; ModuleID = '/home/carl/AnghaBench/Cello/src/extr_Tree.c_Tree_Get_Parent.c'
source_filename = "/home/carl/AnghaBench/Cello/src/extr_Tree.c_Tree_Get_Parent.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.Tree = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.Tree*, i64)* @Tree_Get_Parent to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @Tree_Get_Parent(%struct.Tree* %0, i64 %1) #0 {
  %3 = alloca %struct.Tree*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store %struct.Tree* %0, %struct.Tree** %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load i64, i64* %4, align 8
  %7 = inttoptr i64 %6 to i8*
  %8 = getelementptr inbounds i8, i8* %7, i64 16
  %9 = bitcast i8* %8 to i64*
  %10 = load i64, i64* %9, align 8
  store i64 %10, i64* %5, align 8
  %11 = load i64, i64* %5, align 8
  %12 = and i64 %11, -2
  ret i64 %12
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
